--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.5",
         "drupal/admin_toolbar": "^1.24",
+        "drupal/background_image": "^1.3",
         "drupal/backup_migrate": "^4.0",
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.5.3",
