--- a/web/themes/dedrone/dedrone.info.yml
+++ b/web/themes/dedrone/dedrone.info.yml
@@ -21,6 +21,6 @@ core: 8.x
 libraries:
   - dedrone/global-styling
 regions:
-  header: Header
-  content: Content
+  header: 'Header'
+  content: 'Content'
   footer: 'Footer'
