--- a/web/themes/dedrone/package.json
+++ b/web/themes/dedrone/package.json
@@ -1,9 +1,14 @@
 {
   "devDependencies": {
-    "gulp-autoprefixer": "^2.1.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-install": "^1.1.0",
     "gulp-plumber": "1.0.0",
     "gulp-rename": "1.2.2",
     "gulp-sass": "^4.0.1",
     "gulp-util": "^3.0.8"
+  },
+  "dependencies": {
+    "gulp-install": "^1.1.0"
   }
 }
