--- a/web/themes/dedrone/dedrone.libraries.yml
+++ b/web/themes/dedrone/dedrone.libraries.yml
@@ -2,6 +2,9 @@ global-styling:
   version: VERSION
   css:
     theme:
+      css/vendors/swiper/swiper.min.css: {}
       css/styles.css: {}
   js:
+    js/libs/swiper/swiper.min.js: {}
+    js/libs/bootstrap/bootstrap.min.js: {}
     js/main.js: {}
