--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "drupal/admin_toolbar": "^1.24",
         "drupal/backup_migrate": "^4.0",
         "drupal/block_class": "^1.0",
+        "drupal/color_field": "^1.0",
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.5.3",
         "drupal/ctools": "^3.0",
@@ -32,6 +33,7 @@
         "drupal/file_browser": "^1.1",
         "drupal/honeypot": "^1.27",
         "drupal/inline_entity_form": "^1.0@RC",
+        "drupal/jquery_colorpicker": "^1.4",
         "drupal/link_class": "^1.3",
         "drupal/media_entity_browser": "^2.0",
         "drupal/media_entity_image": "^1.3",
