--- a/config/sync/core.entity_view_display.node.page.teaser.yml
+++ b/config/sync/core.entity_view_display.node.page.teaser.yml
@@ -17,4 +17,7 @@ content:
   links:
     weight: 101
     region: content
-hidden: {  }
+hidden:
+  body: true
+  field_paragraph: true
+  field_section: true
