--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -5,10 +5,12 @@ module:
   backup_migrate: 0
   big_pipe: 0
   block: 0
+  block_class: 0
   block_content: 0
   breakpoint: 0
   ckeditor: 0
   color: 0
+  color_field: 0
   comment: 0
   config: 0
   contact: 0
@@ -33,6 +35,7 @@ module:
   history: 0
   honeypot: 0
   image: 0
+  jquery_colorpicker: 0
   kint: 0
   link: 0
   link_class: 0
@@ -54,6 +57,7 @@ module:
   token: 0
   toolbar: 0
   tour: 0
+  twig_field_value: 0
   ultimate_cron: 0
   update: 0
   user: 0
