--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "drupal/block_class": "^1.0",
         "drupal/bootstrap_paragraphs": "^2.0",
         "drupal/color_field": "^2.0",
+        "drupal/colorbox": "^1.4",
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.5.3",
         "drupal/ctools": "^3.0",
