--- a/composer.json
+++ b/composer.json
@@ -30,14 +30,13 @@
     ],
     "require": {
         "composer/installers": "^1.2",
-	"jaypan/jquery_colorpicker": "^1.0",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.5",
         "drupal/admin_toolbar": "^1.24",
         "drupal/backup_migrate": "^4.0",
         "drupal/bg_image_formatter": "^1.2",
-        "drupal/bootstrap_paragraphs": "^2.0",
         "drupal/block_class": "^1.0",
+        "drupal/bootstrap_paragraphs": "^2.0",
         "drupal/color_field": "^1.0",
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.5.3",
@@ -59,9 +58,11 @@
         "drupal/token": "^1.3",
         "drupal/ultimate_cron": "^2.0@alpha",
         "drupal/view_mode_selector": "1.x-dev",
+        "drupal/viewsreference": "^1.2",
         "drupal/webform": "^5.0@RC",
         "drush/drush": "^9.0.0",
         "enyo/dropzone": "^5.1",
+        "jaypan/jquery_colorpicker": "^1.0",
         "oomphinc/composer-installers-extender": "^1.1",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
