--- a/config/sync/core.entity_view_display.node.page.default.yml
+++ b/config/sync/core.entity_view_display.node.page.default.yml
@@ -19,15 +19,15 @@ mode: default
 content:
   field_section:
     type: entity_reference_revisions_entity_view
-    weight: 102
+    weight: 1
+    region: content
     label: hidden
     settings:
-      view_mode: view_mode_selector
+      view_mode: default
       link: ''
     third_party_settings: {  }
-    region: content
   links:
-    weight: 101
+    weight: 0
     region: content
     settings: {  }
     third_party_settings: {  }
