--- a/config/sync/field.storage.paragraph.field_image.yml
+++ b/config/sync/field.storage.paragraph.field_image.yml
@@ -1,27 +1,17 @@
-uuid: 328142a0-d4d3-4165-a259-d629e1e15d6b
+uuid: a0808ae0-6d5b-415f-9c44-10d3ddff6e81
 langcode: en
 status: true
 dependencies:
   module:
-    - file
-    - image
+    - media
     - paragraphs
 id: paragraph.field_image
 field_name: field_image
 entity_type: paragraph
-type: image
+type: entity_reference
 settings:
-  uri_scheme: public
-  default_image:
-    uuid: ''
-    alt: ''
-    title: ''
-    width: null
-    height: null
-  target_type: file
-  display_field: false
-  display_default: false
-module: image
+  target_type: media
+module: core
 locked: false
 cardinality: 1
 translatable: true
