Updated Data Base and bug fixing

--- a/config/sync/field.field.paragraph.customer_secondary_pages_with_im.field_content.yml
+++ b/config/sync/field.field.paragraph.customer_secondary_pages_with_im.field_content.yml
@@ -17,5 +17,7 @@ required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
-settings: {  }
+settings:
+  handler: default
+  handler_settings: {  }
 field_type: text_long
