--- a/config/sync/field.field.paragraph.customer_secondary_pages_with_im.field_image.yml
+++ b/config/sync/field.field.paragraph.customer_secondary_pages_with_im.field_image.yml
@@ -25,4 +25,19 @@ settings:
       field: _none
     auto_create: false
     auto_create_bundle: ''
+  file_extensions: 'png gif jpg jpeg'
+  alt_field: 1
+  alt_field_required: 1
+  title_field: 0
+  title_field_required: 0
+  max_resolution: ''
+  min_resolution: ''
+  default_image:
+    uuid: null
+    alt: ''
+    title: ''
+    width: null
+    height: null
+  file_directory: '[date:custom:Y]-[date:custom:m]'
+  max_filesize: ''
 field_type: entity_reference
