--- a/web/themes/dedrone/dedrone.libraries.yml
+++ b/web/themes/dedrone/dedrone.libraries.yml
@@ -8,3 +8,7 @@ global-styling:
     js/libs/swiper/swiper.min.js: {}
     js/libs/bootstrap/bootstrap.min.js: {}
     js/main.js: {}
+  dependencies:
+    - core/jquery
+    - core/drupalSettings
+    - core/drupal
