--- a/config/sync/core.entity_view_display.media.video.default.yml
+++ b/config/sync/core.entity_view_display.media.video.default.yml
@@ -17,7 +17,7 @@ content:
   field_media_video_file:
     type: file_url_plain
     weight: 0
-    label: visually_hidden
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     region: content
