--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -5,20 +5,23 @@ dependencies:
   config:
     - field.field.node.event.field_event_date
     - field.field.node.event.field_event_description
+    - field.field.node.event.field_event_description_full
     - field.field.node.event.field_event_image
+    - field.field.node.event.field_event_registration_form
     - node.type.event
   module:
     - datetime
     - image
     - text
     - user
+    - webform
 id: node.event.default
 targetEntityType: node
 bundle: event
 mode: default
 content:
   field_event_date:
-    weight: 3
+    weight: 4
     label: hidden
     settings:
       format_type: medium
@@ -33,6 +36,13 @@ content:
     third_party_settings: {  }
     type: text_default
     region: content
+  field_event_description_full:
+    weight: 3
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
+    region: content
   field_event_image:
     weight: 1
     label: hidden
@@ -41,6 +51,14 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
+  field_event_registration_form:
+    weight: 5
+    label: hidden
+    settings:
+      source_entity: true
+    third_party_settings: {  }
+    type: webform_entity_reference_entity_view
     region: content
   links:
     weight: 0
