--- a/config/sync/core.entity_form_display.paragraph.customer_page_content_with_image.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.customer_page_content_with_image.default.yml
@@ -3,13 +3,13 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.image_entity_browser
     - field.field.paragraph.customer_page_content_with_image.field_button
-    - field.field.paragraph.customer_page_content_with_image.field_content
-    - field.field.paragraph.customer_page_content_with_image.field_image_custom_page
+    - field.field.paragraph.customer_page_content_with_image.field_description
+    - field.field.paragraph.customer_page_content_with_image.field_image
+    - image.style.thumbnail
     - paragraphs.paragraphs_type.customer_page_content_with_image
   module:
-    - entity_browser
+    - image
     - link_class
     - text
 id: paragraph.customer_page_content_with_image.default
@@ -18,7 +18,7 @@ bundle: customer_page_content_with_image
 mode: default
 content:
   field_button:
-    weight: 2
+    weight: 0
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -28,7 +28,7 @@ content:
     third_party_settings: {  }
     type: link_class_field_widget
     region: content
-  field_content:
+  field_description:
     weight: 1
     settings:
       rows: 5
@@ -36,19 +36,13 @@ content:
     third_party_settings: {  }
     type: text_textarea
     region: content
-  field_image_custom_page:
+  field_image:
     weight: 3
     settings:
-      entity_browser: image_entity_browser
-      field_widget_display: label
-      field_widget_edit: true
-      field_widget_remove: true
-      selection_mode: selection_append
-      field_widget_replace: false
-      open: false
-      field_widget_display_settings: {  }
+      progress_indicator: throbber
+      preview_image_style: thumbnail
     third_party_settings: {  }
-    type: entity_browser_entity_reference
+    type: image_image
     region: content
 hidden:
   created: true
