--- a/config/sync/core.entity_form_display.paragraph.customer_secondary_pages_with_im.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.customer_secondary_pages_with_im.default.yml
@@ -4,8 +4,8 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_entity_browser
-    - field.field.paragraph.customer_secondary_pages_with_im.field_content
-    - field.field.paragraph.customer_secondary_pages_with_im.field_image
+    - field.field.paragraph.customer_secondary_pages_with_im.field_background_img
+    - field.field.paragraph.customer_secondary_pages_with_im.field_description
     - paragraphs.paragraphs_type.customer_secondary_pages_with_im
   module:
     - entity_browser
@@ -15,16 +15,8 @@ targetEntityType: paragraph
 bundle: customer_secondary_pages_with_im
 mode: default
 content:
-  field_content:
-    weight: 1
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
-    type: text_textarea
-    region: content
-  field_image:
-    weight: 0
+  field_background_img:
+    weight: 2
     settings:
       entity_browser: image_entity_browser
       field_widget_display: label
@@ -36,6 +28,14 @@ content:
       field_widget_display_settings: {  }
     third_party_settings: {  }
     type: entity_browser_entity_reference
+    region: content
+  field_description:
+    weight: 1
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
     region: content
 hidden:
   created: true
