--- a/config/sync/core.entity_form_display.paragraph.slider_icon_block.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.slider_icon_block.default.yml
@@ -3,32 +3,26 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.image_entity_browser
-    - field.field.paragraph.slider_icon_block.field_icon
+    - field.field.paragraph.slider_icon_block.field_image
     - field.field.paragraph.slider_icon_block.field_our_products
     - field.field.paragraph.slider_icon_block.field_shared_h2_title
+    - image.style.thumbnail
     - paragraphs.paragraphs_type.slider_icon_block
   module:
-    - entity_browser
+    - image
     - text
 id: paragraph.slider_icon_block.default
 targetEntityType: paragraph
 bundle: slider_icon_block
 mode: default
 content:
-  field_icon:
-    weight: 0
+  field_image:
+    weight: 4
     settings:
-      entity_browser: image_entity_browser
-      field_widget_display: label
-      field_widget_edit: true
-      field_widget_remove: true
-      selection_mode: selection_append
-      field_widget_replace: false
-      open: false
-      field_widget_display_settings: {  }
+      progress_indicator: throbber
+      preview_image_style: thumbnail
     third_party_settings: {  }
-    type: entity_browser_entity_reference
+    type: image_image
     region: content
   field_our_products:
     weight: 3
