--- a/config/sync/core.entity_view_display.paragraph.customer_page_content_with_image.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.customer_page_content_with_image.default.yml
@@ -4,10 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.customer_page_content_with_image.field_button
-    - field.field.paragraph.customer_page_content_with_image.field_content
-    - field.field.paragraph.customer_page_content_with_image.field_image_custom_page
+    - field.field.paragraph.customer_page_content_with_image.field_description
+    - field.field.paragraph.customer_page_content_with_image.field_image
     - paragraphs.paragraphs_type.customer_page_content_with_image
   module:
+    - image
     - link
     - text
 id: paragraph.customer_page_content_with_image.default
@@ -27,20 +28,20 @@ content:
     third_party_settings: {  }
     type: link
     region: content
-  field_content:
+  field_description:
     weight: 1
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
-  field_image_custom_page:
-    type: entity_reference_entity_view
-    weight: 0
+  field_image:
+    weight: 3
     label: hidden
     settings:
-      view_mode: default
-      link: false
+      image_style: ''
+      image_link: ''
     third_party_settings: {  }
+    type: image
     region: content
 hidden: {  }
