--- a/config/sync/core.entity_view_display.paragraph.customers_secondary_slider.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.customers_secondary_slider.default.yml
@@ -3,9 +3,9 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.customers_secondary_slider.field_content
+    - field.field.paragraph.customers_secondary_slider.field_background_img
+    - field.field.paragraph.customers_secondary_slider.field_description
     - field.field.paragraph.customers_secondary_slider.field_icon_and_text
-    - field.field.paragraph.customers_secondary_slider.field_image
     - paragraphs.paragraphs_type.customers_secondary_slider
   module:
     - entity_reference_revisions
@@ -15,7 +15,15 @@ targetEntityType: paragraph
 bundle: customers_secondary_slider
 mode: default
 content:
-  field_content:
+  field_background_img:
+    weight: 0
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_description:
     weight: 1
     label: hidden
     settings: {  }
@@ -30,13 +38,5 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
-    region: content
-  field_image:
-    weight: 3
-    label: hidden
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
     region: content
 hidden: {  }
