--- a/config/sync/core.entity_view_display.paragraph.slider_icon_block.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.slider_icon_block.default.yml
@@ -3,25 +3,26 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.slider_icon_block.field_icon
+    - field.field.paragraph.slider_icon_block.field_image
     - field.field.paragraph.slider_icon_block.field_our_products
     - field.field.paragraph.slider_icon_block.field_shared_h2_title
     - paragraphs.paragraphs_type.slider_icon_block
   module:
+    - image
     - text
 id: paragraph.slider_icon_block.default
 targetEntityType: paragraph
 bundle: slider_icon_block
 mode: default
 content:
-  field_icon:
-    type: entity_reference_entity_view
+  field_image:
     weight: 0
     label: hidden
     settings:
-      view_mode: default
-      link: false
+      image_style: ''
+      image_link: ''
     third_party_settings: {  }
+    type: image
     region: content
   field_our_products:
     weight: 1
