--- a/config/sync/field.field.paragraph.customer_page_content_with_image.field_description.yml
+++ b/config/sync/field.field.paragraph.customer_page_content_with_image.field_description.yml
@@ -1,23 +1,21 @@
-uuid: 7c7a9a18-6c36-4435-a684-4736a5877c66
+uuid: aa238d84-5c3a-40ac-9b8b-a6cc5bcc1c1d
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_content
+    - field.storage.paragraph.field_description
     - paragraphs.paragraphs_type.customer_page_content_with_image
   module:
     - text
-id: paragraph.customer_page_content_with_image.field_content
-field_name: field_content
+id: paragraph.customer_page_content_with_image.field_description
+field_name: field_description
 entity_type: paragraph
 bundle: customer_page_content_with_image
-label: content
+label: Description
 description: ''
 required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
-settings:
-  handler: default
-  handler_settings: {  }
+settings: {  }
 field_type: text_long
