--- a/config/sync/field.field.paragraph.customer_secondary_pages_with_im.field_background_img.yml
+++ b/config/sync/field.field.paragraph.customer_secondary_pages_with_im.field_background_img.yml
@@ -1,19 +1,19 @@
-uuid: 80707832-f237-4cfd-bd0a-074d467511be
+uuid: 3130f1b7-d06f-48d0-8f7a-22c95a64237e
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_image_custom_page
+    - field.storage.paragraph.field_background_img
     - media.type.image
-    - paragraphs.paragraphs_type.customer_page_content_with_image
-id: paragraph.customer_page_content_with_image.field_image_custom_page
-field_name: field_image_custom_page
+    - paragraphs.paragraphs_type.customer_secondary_pages_with_im
+id: paragraph.customer_secondary_pages_with_im.field_background_img
+field_name: field_background_img
 entity_type: paragraph
-bundle: customer_page_content_with_image
-label: image
+bundle: customer_secondary_pages_with_im
+label: 'Background image'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
