--- a/config/sync/field.field.paragraph.customers_page_slider.field_description.yml
+++ b/config/sync/field.field.paragraph.customers_page_slider.field_description.yml
@@ -1,23 +1,21 @@
-uuid: cdf6d717-d8c1-4725-bc18-7b463e91d8c3
+uuid: 19a3ba6c-eb4a-43cb-af2f-7b90031e468e
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_content
+    - field.storage.paragraph.field_description
     - paragraphs.paragraphs_type.customers_page_slider
   module:
     - text
-id: paragraph.customers_page_slider.field_content
-field_name: field_content
+id: paragraph.customers_page_slider.field_description
+field_name: field_description
 entity_type: paragraph
 bundle: customers_page_slider
-label: content
+label: Description
 description: ''
 required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
-settings:
-  handler: default
-  handler_settings: {  }
+settings: {  }
 field_type: text_long
