--- a/config/sync/field.field.paragraph.customers_secondary_slider.field_description.yml
+++ b/config/sync/field.field.paragraph.customers_secondary_slider.field_description.yml
@@ -1,23 +1,21 @@
-uuid: 768bde60-eac9-432c-b513-93e51c4561df
+uuid: c4bd5044-e39f-4c2c-910b-35e221d1aa9d
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_content
+    - field.storage.paragraph.field_description
     - paragraphs.paragraphs_type.customers_secondary_slider
   module:
     - text
-id: paragraph.customers_secondary_slider.field_content
-field_name: field_content
+id: paragraph.customers_secondary_slider.field_description
+field_name: field_description
 entity_type: paragraph
 bundle: customers_secondary_slider
-label: content
+label: Description
 description: ''
 required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
-settings:
-  handler: default
-  handler_settings: {  }
+settings: {  }
 field_type: text_long
