--- a/config/sync/core.entity_form_display.paragraph.bp_columns.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.bp_columns.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.paragraph.bp_columns.bp_background
     - field.field.paragraph.bp_columns.bp_column_content
     - field.field.paragraph.bp_columns.bp_width
+    - field.field.paragraph.bp_columns.field_css_styles
     - paragraphs.paragraphs_type.bp_columns
   module:
     - paragraphs
@@ -38,6 +39,15 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: options_select
+    region: content
+  field_css_styles:
+    weight: 3
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
     region: content
 hidden:
   created: true
