--- a/config/sync/core.entity_form_display.paragraph.shared_title_description.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.shared_title_description.default.yml
@@ -3,10 +3,10 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.shared_title_description.field_css_classes
-    - field.field.paragraph.shared_title_description.field_position
+    - field.field.paragraph.shared_title_description.field_css_styles
     - field.field.paragraph.shared_title_description.field_shared_h1_title
     - field.field.paragraph.shared_title_description.field_shared_h2_title
+    - field.field.paragraph.shared_title_description.field_shared_position
     - paragraphs.paragraphs_type.shared_title_description
   module:
     - text
@@ -15,19 +15,14 @@ targetEntityType: paragraph
 bundle: shared_title_description
 mode: default
 content:
-  field_css_classes:
-    weight: 3
+  field_css_styles:
+    weight: 4
     settings:
+      match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_position:
-    weight: 2
-    settings: {  }
-    third_party_settings: {  }
-    type: options_select
+    type: entity_reference_autocomplete_tags
     region: content
   field_shared_h1_title:
     weight: 0
@@ -44,6 +39,12 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
+    region: content
+  field_shared_position:
+    weight: 5
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
     region: content
 hidden:
   created: true
