--- a/config/sync/core.entity_view_display.paragraph.bp_simple.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.bp_simple.default.yml
@@ -6,7 +6,7 @@ dependencies:
     - field.field.paragraph.bp_simple.bp_background
     - field.field.paragraph.bp_simple.bp_text
     - field.field.paragraph.bp_simple.bp_width
-    - field.field.paragraph.bp_simple.field_css_class
+    - field.field.paragraph.bp_simple.field_css_styles
     - paragraphs.paragraphs_type.bp_simple
   module:
     - options
@@ -26,27 +26,20 @@ content:
     type: list_key
     region: content
   bp_text:
-    weight: 2
+    weight: 1
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   bp_width:
-    weight: 1
+    type: list_default
+    weight: 2
+    region: content
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    type: list_key
-    region: content
-  field_css_class:
-    weight: 3
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
 hidden:
   created: true
+  field_css_styles: true
   uid: true
