--- a/config/sync/field.storage.paragraph.field_shared_buttons_position.yml
+++ b/config/sync/field.storage.paragraph.field_shared_buttons_position.yml
@@ -1,12 +1,12 @@
-uuid: 6a2135bd-675e-4cf9-b796-a2f548e26d72
+uuid: ce364f52-5cdc-4d8e-8b11-1c09acca0831
 langcode: en
 status: true
 dependencies:
   module:
     - options
     - paragraphs
-id: paragraph.field_position
-field_name: field_position
+id: paragraph.field_shared_buttons_position
+field_name: field_shared_buttons_position
 entity_type: paragraph
 type: list_string
 settings:
@@ -20,6 +20,12 @@ settings:
     -
       value: Center
       label: Center
+    -
+      value: Left_vertically
+      label: 'Left vertically'
+    -
+      value: Right_vertically
+      label: 'Right vertically'
   allowed_values_function: ''
 module: options
 locked: false
