--- a/config/sync/views.view.blog_posts.yml
+++ b/config/sync/views.view.blog_posts.yml
@@ -620,7 +620,7 @@ display:
           expose:
             operator_id: field_blog_category_value_op
             label: ''
-            description: ''
+            description: 'All Blog Posts'
             use_operator: false
             operator: field_blog_category_value_op
             identifier: field_blog_category_value
@@ -713,6 +713,7 @@ display:
         sorts: false
         filters: false
         filter_groups: false
+        title: false
       use_more_always: true
       use_more_text: 'VIEW ALL BLOG POSTS'
       link_display: blog_archive
@@ -823,6 +824,7 @@ display:
         operator: AND
         groups:
           1: AND
+      title: 'Recent Blog Posts'
     cache_metadata:
       max-age: -1
       contexts:
